update dos scripts

--- a/clientes.html
+++ b/clientes.html
@@ -69,9 +69,9 @@
                     <div class="inputs-proprios">
                         <label for="estado">Estado:</label>
                         <select name="estado" id="estado">
-                            <option value="1">AC</option>
-                            <option value="2">AL</option>
-                            <option value="3">AP</option>
+                            <option value="AC">AC</option>
+                            <option value="AL">AL</option>
+                            <option value="AP">AP</option>
                             <option value="4">AM</option>
                             <option value="5">BA</option>
                             <option value="6">CE</option>
