--- a/prod-clien-cadastrados.html
+++ b/prod-clien-cadastrados.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./estilos/global.css">
     <link rel="stylesheet" href="./estilos/visualizar.css">
 </head>
-<body>
+<body onload="carregaListas()">
     <header>
         <img src="./assets/baixados.png">
         <h1>Cadastrados</h1>
@@ -22,23 +22,19 @@
         <section class="inputs" id="clien">
             <h3>Clientes</h3>
            <ol>
-               <li>a</li>
-               <li>b</li>
-               <li>c</li>
+               <!-- código será gerado pelo js aqui -->
            </ol>
         </section>
         <section class="inputs" id="prod">
             <h3>Produtos</h3>
             <ol>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+                <!-- código será gerado pelo js aqui -->
             </ol>
         </section>
     </main>
     <div id="divAdicional">
         <a href="./index.html">
-            <button class="botao")">Voltar</button>
+            <button class="botao">Voltar</button>
         </a>
     </div>
     <footer>
@@ -47,5 +43,7 @@
             <p>By Mateus</p>
         </div>
     </footer>
+
+    <script src="./script/script.js"></script>
 </body>
 </html>
