--- a/clientes.html
+++ b/clientes.html
@@ -72,29 +72,29 @@
                             <option value="AC">AC</option>
                             <option value="AL">AL</option>
                             <option value="AP">AP</option>
-                            <option value="4">AM</option>
-                            <option value="5">BA</option>
-                            <option value="6">CE</option>
-                            <option value="7">ES</option>
-                            <option value="8">GO</option>
-                            <option value="9">MA</option>
-                            <option value="10">MT</option>
-                            <option value="11">MS</option>
-                            <option value="12">MG</option>
-                            <option value="13">PA</option>
-                            <option value="14">PB</option>
-                            <option value="15">PR</option>
-                            <option value="16">PE</option>
-                            <option value="17">PI</option>
-                            <option value="18">RJ</option>
-                            <option value="19">RN</option>
-                            <option value="20">RS</option>
-                            <option value="21">RR</option>
-                            <option value="22">SC</option>
-                            <option value="23">SP</option>
-                            <option value="24">SE</option>
-                            <option value="25">TO</option>
-                            <option value="26">DF</option>
+                            <option value="AM">AM</option>
+                            <option value="BA">BA</option>
+                            <option value="CE">CE</option>
+                            <option value="ES">ES</option>
+                            <option value="GO">GO</option>
+                            <option value="MA">MA</option>
+                            <option value="MT">MT</option>
+                            <option value="MS">MS</option>
+                            <option value="MG">MG</option>
+                            <option value="PA">PA</option>
+                            <option value="PB">PB</option>
+                            <option value="PR">PR</option>
+                            <option value="PE">PE</option>
+                            <option value="PI">PI</option>
+                            <option value="RJ">RJ</option>
+                            <option value="RN">RN</option>
+                            <option value="RS">RS</option>
+                            <option value="RR">RR</option>
+                            <option value="SC">SC</option>
+                            <option value="SP">SP</option>
+                            <option value="SE">SE</option>
+                            <option value="TO">TO</option>
+                            <option value="DF">DF</option>
                         </select>
                     </div>
                 </div>
