--- a/prod-clien-cadastrados.html
+++ b/prod-clien-cadastrados.html
@@ -22,18 +22,18 @@
         <section class="inputs" id="clien">
             <h3>Clientes</h3>
            <ol>
-               <!-- código será gerado pelo js aqui -->
+               <!-- AQUI SERÁ CRIADA UMA LISTA PELO JS -->
            </ol>
         </section>
         <section class="inputs" id="prod">
             <h3>Produtos</h3>
             <ol>
-                <!-- código será gerado pelo js aqui -->
+                <!-- AQUI SERÁ CRIADA UMA LISTA PELO JS -->
             </ol>
         </section>
     </main>
     <div id="divAdicional">
-        <a href="./index.html">
+        <a href="./index.html" class="inputs">
             <button class="botao">Voltar</button>
         </a>
     </div>
