Algumas pequenas mudanças estéticas

--- a/produtos.html
+++ b/produtos.html
@@ -30,11 +30,11 @@
             </div>
             <div class="inputs-proprios">
                 <label for="codigo">Código:</label>
-                <input id="codigo" type="text">
+                <input id="codigo" type="text" placeholder="Apenas números">
             </div >
             <div class="inputs-proprios">
-                <label for="preco">Preço:</label>
-                <input id="preco" type="text">
+                <label for="preco">Preço em reais:</label>
+                <input id="preco" type="text" placeholder="ex.: 7,00">
             </div>
             <button class="botao" onclick="cadastraProduto()">Cadastrar</button>
         </div>
